# solarsynoptic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  aia_helpers.py  aia_synoptic_maps.py  setup.cfg  time_helpers.py
.github/workflows/: python-test.yml
docs/: Makefile  api.rst  conf.py  guide.rst  index.rst
examples/: aia_carrington.py  plot_aia_carrington.py  plot_coadd.py  plot_reprojection_caching.py
solarsynoptic/coadd/: __init__.py  coadd.py  weights.py
solarsynoptic/combine/: __init__.py  coadd.py  weights.py
solarsynoptic/data/: __init__.py  aia.py  helpers.py  stereo.py
solarsynoptic/data/tests/: test_aia.py  test_stereo.py
solarsynoptic/reprojection/: __init__.py  database.py  reprojection.py
solarsynoptic/reprojection/tests/: test_reprojection.py
