[metadata]
name = solarsynoptic
description = Tools for creating synoptic maps of the Sun.
long_description = file: README.rst
author = David Stansby
author_email = dstansby@protonmail.com
url = https://github.com/dstansby/solarsynoptic
license = BSD 2-Clause

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    sunpy[net]
    reproject

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
    sphinx-gallery
